--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="StarVector">
-  <meta name="keywords" content="SVG Generation and Vectorization">
+  <meta name="description" content="BigDocs">
+  <meta name="keywords" content="BigDocs">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>StarVector</title>
+  <title>BigDocs</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
