--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">BigDocs: <span class="is-size-2"><span class="is-size-1">G</span>enerating <span class="is-size-1">S</span>calable <span class="is-size-1">V</span>ector <span class="is-size-1">G</span>raphics <span class="is-size-1">C</span>ode <span class="is-size-1">F</span>rom <span class="is-size-1">I</span>mages <span class="is-size-1">A</span>nd <span class="is-size-1">T</span>ext</span></h1>
+            <h1 class="title is-1 publication-title">BigDocs: <span class="is-size-2"><span class="is-size-1">A</span>n <span class="is-size-1">O</span>pen and <span class="is-size-1">P</span>ermissively-<span class="is-size-1">L</span>icensed <span class="is-size-1">D</span>ataset for <span class="is-size-1">T</span>raining <span class="is-size-1">M</span>ultimodal <span class="is-size-1">M</span>odels on <span class="is-size-1">D</span>ocument and <span class="is-size-1">C</span>ode <span class="is-size-1">T</span>asks</span></h1>
             <div class="column has-text-centered">
               <img src="static/images/bigdocs-tasks.png" alt="BigDocs Tasks" width="100%">
             </div>
