--- a/index.html
+++ b/index.html
@@ -114,7 +114,11 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">BigDocs: <span class="is-size-2"><span class="is-size-1">A</span>n <span class="is-size-1">O</span>pen and <span class="is-size-1">P</span>ermissively-<span class="is-size-1">L</span>icensed <span class="is-size-1">D</span>ataset for <span class="is-size-1">T</span>raining <span class="is-size-1">M</span>ultimodal <span class="is-size-1">M</span>odels on <span class="is-size-1">D</span>ocument and <span class="is-size-1">C</span>ode <span class="is-size-1">T</span>asks</span></h1>
+            <div class="is-flex is-align-items-center is-justify-content-center">
+              <h1 class="title is-1 publication-title">
+                <img src="static/images/logo.png" alt="BigDocs Logo" style="height: 60px; vertical-align: middle;">BigDocs: An Open and Permissively-Licensed Dataset for Training Multimodal Models on Document and Code Tasks
+              </h1>
+            </div>
             <div class="column has-text-centered">
               <img src="static/images/bigdocs-tasks.png" alt="BigDocs Tasks" width="100%">
             </div>
