--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
   <link rel="stylesheet" href="./static/css/index.css">
-  <link rel="icon" href="images/logo.png">
+  <link rel="icon" type="image/png" href="images/logo.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
@@ -127,7 +127,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="#" target="_blank"
+                <a href="https://huggingface.co/datasets/ServiceNow/BigDocs-Bench" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <img src="static/images/huggingface_logo-noborder.svg" alt="Hugging Face" style="height: 1em;">
@@ -136,7 +136,7 @@
                 </a>
               </span>
               <span class="link-block">
-                  <a href="#" target="_blank"
+                  <a href="https://huggingface.co/datasets/ServiceNow/BigDocs-Bench" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <img src="static/images/huggingface_logo-noborder.svg" alt="Hugging Face" style="height: 1em;">
@@ -144,15 +144,6 @@
                   <span>BigDocs-Bench</span>
                 </a>
               </span>
-              <!-- <span class="link-block">
-                <a href="#" target="_blank"
-                  class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                    <img src="static/images/huggingface_logo-noborder.svg" alt="Hugging Face" style="height: 1em;">
-                  </span>
-                  <span>Models</span>
-                </a>
-              </span> -->
             </div>
 
           </div>
@@ -204,7 +195,7 @@
     </thead>
     <tbody>
       <tr>
-        <td>Screenshot-2HTML (<img src="static/images/huggingface_logo-noborder.svg" alt="Hugging Face" style="height: 1em;"> <a href="#">Link</a>)</td>
+        <td>Screenshot-2HTML </td>
         <td>9,338</td>
         <td>1,000</td>
         <td>500</td>
@@ -212,7 +203,7 @@
         <td>32,700 ± 53,105</td>
       </tr>
       <tr>
-        <td>Table-2LaTeX (<img src="static/images/huggingface_logo-noborder.svg" alt="Hugging Face" style="height: 1em;"> <a href="#">Link</a>)</td>
+        <td>Table-2LaTeX </td>
         <td>77,669</td>
         <td>1,000</td>
         <td>500</td>
@@ -220,7 +211,7 @@
         <td>438 ± 540</td>
       </tr>
       <tr>
-        <td>Image2SVG (<img src="static/images/huggingface_logo-noborder.svg" alt="Hugging Face" style="height: 1em;"> <a href="#">Link</a>)</td>
+        <td>Image2SVG </td>
         <td>198,000</td>
         <td>2,000</td>
         <td>748</td>
@@ -228,7 +219,7 @@
         <td>2,871 ± 1,728</td>
       </tr>
       <tr>
-        <td>Image2Flow (GraphViz) (<img src="static/images/huggingface_logo-noborder.svg" alt="Hugging Face" style="height: 1em;"> <a href="#">Link</a>)</td>
+        <td>Image2Flow (GraphViz) </td>
         <td>8,000</td>
         <td>1,000</td>
         <td>500</td>
@@ -236,7 +227,7 @@
         <td>418 ± 124</td>
       </tr>
       <tr>
-        <td>Image2Flow (JSON) (<img src="static/images/huggingface_logo-noborder.svg" alt="Hugging Face" style="height: 1em;"> <a href="#">Link</a>)</td>
+        <td>Image2Flow (JSON) </td>
         <td>8,000</td>
         <td>1,000</td>
         <td>500</td>
@@ -244,7 +235,7 @@
         <td>1,771 ± 601</td>
       </tr>
       <tr>
-        <td>Chart-2Markdown (<img src="static/images/huggingface_logo-noborder.svg" alt="Hugging Face" style="height: 1em;"> <a href="#">Link</a>)</td>
+        <td>Chart-2Markdown </td>
         <td>4,516</td>
         <td>1,000</td>
         <td>500</td>
@@ -252,7 +243,7 @@
         <td>1,559 ± 4,442</td>
       </tr>
       <tr>
-        <td>Chart2Caption (<img src="static/images/huggingface_logo-noborder.svg" alt="Hugging Face" style="height: 1em;"> <a href="#">Link</a>)</td>
+        <td>Chart2Caption </td>
         <td>5,412</td>
         <td>1,300</td>
         <td>650</td>
@@ -260,7 +251,7 @@
         <td>94 ± 49</td>
       </tr>
       <tr>
-        <td>GUI2UserIntent (<img src="static/images/huggingface_logo-noborder.svg" alt="Hugging Face" style="height: 1em;"> <a href="#">Link</a>)</td>
+        <td>GUI2UserIntent </td>
         <td>79,000</td>
         <td>1,000</td>
         <td>500</td>
@@ -268,7 +259,7 @@
         <td>28 ± 4</td>
       </tr>
       <tr>
-        <td>GUI2Summary (<img src="static/images/huggingface_logo-noborder.svg" alt="Hugging Face" style="height: 1em;"> <a href="#">Link</a>)</td>
+        <td>GUI2Summary </td>
         <td>79,000</td>
         <td>1,000</td>
         <td>500</td>
@@ -276,7 +267,7 @@
         <td>132 ± 25</td>
       </tr>
       <tr>
-        <td>GUI-VQA (<img src="static/images/huggingface_logo-noborder.svg" alt="Hugging Face" style="height: 1em;"> <a href="#">Link</a>)</td>
+        <td>GUI-VQA </td>
         <td>78,991</td>
         <td>1,000</td>
         <td>500</td>
